[gd_scene load_steps=30 format=3 uid="uid://d27nx4y2oaemg"]

[ext_resource type="Texture2D" uid="uid://cmdr47xxoj8pm" path="res://Assets/Sprites/mario_peq.png" id="1_p8p2m"]
[ext_resource type="Script" path="res://Characters/mario.gd" id="1_qrvxw"]
[ext_resource type="Texture2D" uid="uid://cfx04hgmp78pe" path="res://Assets/Sprites/mario_gra.png" id="3_s4vkr"]
[ext_resource type="Texture2D" uid="uid://cugksv2gnkjrp" path="res://Assets/Sprites/mario_fueg.png" id="4_v12mp"]
[ext_resource type="AudioStream" uid="uid://dhllj64advhv5" path="res://Musica/smb_powerup.wav" id="5_50sd1"]
[ext_resource type="PackedScene" uid="uid://fbntp1qs3pba" path="res://Scenes/colisiones_mario_p.tscn" id="5_r07et"]
[ext_resource type="AudioStream" uid="uid://d3fu87xqjnp7r" path="res://Musica/smb_pipe.wav" id="6_cean1"]
[ext_resource type="PackedScene" uid="uid://djhq7opy130dc" path="res://Scenes/colisiones_mario_g.tscn" id="6_nog58"]
[ext_resource type="AudioStream" uid="uid://bys0nndfbjtbv" path="res://Musica/smb_mariodie.wav" id="7_g8h8o"]
[ext_resource type="AudioStream" uid="uid://c8pn73rho2awa" path="res://Musica/smb_1-up.wav" id="8_45c1q"]
[ext_resource type="AudioStream" uid="uid://dkyjts4xni6ix" path="res://Musica/smb_jump-small.wav" id="9_canw7"]
[ext_resource type="AudioStream" uid="uid://lb2pwk0b3xt2" path="res://Musica/smb_coin.wav" id="10_eqnik"]

[sub_resource type="Animation" id="Animation_wbwjm"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:frame_coords")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(5, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_x001m"]
resource_name = "agachado"
length = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [6]
}

[sub_resource type="Animation" id="Animation_e72bq"]
resource_name = "caminando"
length = 0.30001
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [1, 2, 3]
}

[sub_resource type="Animation" id="Animation_fnsip"]
resource_name = "entrar_tubo_abajo"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 30)]
}

[sub_resource type="Animation" id="Animation_6jafq"]
resource_name = "entrar_tubo_arriba"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -30)]
}

[sub_resource type="Animation" id="Animation_fjnvl"]
resource_name = "entrar_tubo_derecha"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [1, 2, 3, 1, 2, 3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(30, 0)]
}

[sub_resource type="Animation" id="Animation_u56ap"]
resource_name = "entrar_tubo_izquierda"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [2, 1, 2, 3, 1, 2]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(-30, 0)]
}

[sub_resource type="Animation" id="Animation_vigap"]
resource_name = "gotocastle"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(80, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(-0.0051069, 0.194893, 0.394893, 0.6, 0.8, 1, 1.2, 1.4, 1.6, 1.8, 2, 2.2, 2.4, 2.6, 2.8, 3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [1, 2, 3, 1, 2, 3, 1, 2, 3, 1, 2, 3, 1, 2, 3, 1]
}

[sub_resource type="Animation" id="Animation_f0wj1"]
resource_name = "dile"
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_pnmlp"]
resource_name = "muerte"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(6, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1, 1.5, 2, 2.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 0), Vector2(0, -100), Vector2(0, 0), Vector2(0, 100)]
}

[sub_resource type="Animation" id="Animation_tecip"]
resource_name = "salir_tubo_abajo"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 30), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_7yv64"]
resource_name = "salir_tubo_arriba"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, -30), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_wadxm"]
resource_name = "salir_tubo_derecha"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [1, 2, 3, 2, 2, 3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(30, 0), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_ksw2q"]
resource_name = "salir_tubo_izquierda"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [2, 1, 3, 1, 2, 3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-30, 0), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_lvcl7"]
resource_name = "salto"
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(5, 0)]
}

[sub_resource type="Animation" id="Animation_8gv5p"]
resource_name = "win"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qv2ah"]
_data = {
"RESET": SubResource("Animation_wbwjm"),
"agachado": SubResource("Animation_x001m"),
"caminando": SubResource("Animation_e72bq"),
"entrar_tubo_abajo": SubResource("Animation_fnsip"),
"entrar_tubo_arriba": SubResource("Animation_6jafq"),
"entrar_tubo_derecha": SubResource("Animation_fjnvl"),
"entrar_tubo_izquierda": SubResource("Animation_u56ap"),
"gotocastle": SubResource("Animation_vigap"),
"idle": SubResource("Animation_f0wj1"),
"muerte": SubResource("Animation_pnmlp"),
"salir_tubo_abajo": SubResource("Animation_tecip"),
"salir_tubo_arriba": SubResource("Animation_7yv64"),
"salir_tubo_derecha": SubResource("Animation_wadxm"),
"salir_tubo_izquierda": SubResource("Animation_ksw2q"),
"salto": SubResource("Animation_lvcl7"),
"win": SubResource("Animation_8gv5p")
}

[node name="Mario" type="CharacterBody2D" groups=["mario"]]
collision_layer = 2
collision_mask = 33
script = ExtResource("1_qrvxw")
mario_p = ExtResource("1_p8p2m")
mario_g = ExtResource("3_s4vkr")
mario_f = ExtResource("4_v12mp")

[node name="sonidos" type="Node2D" parent="."]

[node name="agrandar" type="AudioStreamPlayer2D" parent="sonidos"]
stream = ExtResource("5_50sd1")

[node name="encojer o tubo" type="AudioStreamPlayer2D" parent="sonidos"]
stream = ExtResource("6_cean1")

[node name="morir" type="AudioStreamPlayer2D" parent="sonidos"]
stream = ExtResource("7_g8h8o")

[node name="vida extra" type="AudioStreamPlayer2D" parent="sonidos"]
stream = ExtResource("8_45c1q")

[node name="saltar" type="AudioStreamPlayer2D" parent="sonidos"]
stream = ExtResource("9_canw7")

[node name="moneda" type="AudioStreamPlayer2D" parent="sonidos"]
stream = ExtResource("10_eqnik")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_p8p2m")
hframes = 7
frame = 5

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(0, -71)
zoom = Vector2(2.9, 2.9)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_qv2ah")
}

[node name="colision_p" parent="." instance=ExtResource("5_r07et")]

[node name="colision_g" parent="." instance=ExtResource("6_nog58")]
visible = false

[node name="inmunidad" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="change_visibility" type="Timer" parent="."]
wait_time = 0.1

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="cuerpoEntro" from="colision_p" to="." method="_on_collision_shape_2d_cuerpo_entro"]
[connection signal="cuerpoEntro" from="colision_g" to="." method="_on_collision_shape_2d_cuerpo_entro"]
[connection signal="timeout" from="inmunidad" to="." method="_on_inmunidad_timeout"]
[connection signal="timeout" from="change_visibility" to="." method="_on_change_visibility_timeout"]
